--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title:            "GitHub Images"
 description:      "「角落」敲代码。"
-url:              https://img.itgo.ml 
+url:              https://ityet.com
 signoff:          "Leo"
 facebook_appid:   
 google_analytics: UA-101222464-1
